--- a/css/services.css
+++ b/css/services.css
@@ -58,7 +58,7 @@
   font-size: 19px;
   font-weight: 600;
   line-height: 1.4;
-  color: #0086fc;
+  color: #121212;
 }
 .service-card__text {
   margin: 0;
